--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site settings
-title: Emping
-email: your-email@domain.com
+title: Devlxin
+email: 1050421454@qq.com
 description: > # this means to ignore newlines until "baseurl:"
-  Let's Eat!!.
+  Enjoy
 baseurl: "" # the subpath of your site, e.g. /newpath-for-emping
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-GoogleAnalytics: UA-xxxxxx-x
+url: "http://www.devlxin.com" # the base hostname & protocol for your site
+twitter_username: 
+github_username:  devlxin
+GoogleAnalytics: 
 
 twitter:
-  username: rmsubekti
+  username: 
 facebook:
-  app_id: 1234567
-  publisher: 1234567
+  app_id: 
+  publisher: 
 
 sass:
     style: compressed
