--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 text_color_theme: default #eg: default | dark | forest | ocean | chocolate | orange
 ## Base settings ##
 # url:  #the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl: http://www.devlxin.com
+baseurl: /
 title: devlxin's blog
 description: > #this means to ignore newlines until "nav_lists:"
   devlxin's Blog
