--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ timezone: Asia/Shanghai #see https://en.wikipedia.org/wiki/List_of_tz_database_t
 ## Author & social ##
 author:
   name: devlxin
-  email: 1050421454@qq.com
+  email: devlxin.cn@gmail.com
   # facebook:  #your Facebook username
   # twitter:  #your Twitter username
   github: devlxin
